reference/k/snapshots/functions-mutual-recursion.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-mutual-recursion.cdz
---
# functions-mutual-recursion

## Input

```cadenza
fn is_even n =
    if n == 0 then true else (is_odd (n - 1))

fn is_odd n =
    if n == 0 then false else (is_even (n - 1))

is_even 4
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 109 117 116 117 97 108 45 114 101 99 117 114 115 105 111 110 46 99 100 122) (Span (0 62) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 105 115 95 101 118 101 110)) (Ident 110)) (Apply (Synthetic 95 95 98 108 111 99 107 95 95) (Apply (Apply (Apply (Apply (Apply (Ident 105 102) (Apply (Op 61 61) (Ident 110) (Integer 0))) (Ident 116 104 101 110)) (Ident 116 114 117 101)) (Ident 101 108 115 101)) (Apply (Ident 105 115 95 111 100 100) (Apply (Op 45) (Ident 110) (Integer 1))))))) (Span (62 125) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 105 115 95 111 100 100)) (Ident 110)) (Apply (Synthetic 95 95 98 108 111 99 107 95 95) (Apply (Apply (Apply (Apply (Apply (Ident 105 102) (Apply (Op 61 61) (Ident 110) (Integer 0))) (Ident 116 104 101 110)) (Ident 102 97 108 115 101)) (Ident 101 108 115 101)) (Apply (Ident 105 115 95 101 118 101 110) (Apply (Op 45) (Ident 110) (Integer 1))))))) (Span (125 134) (Apply (Ident 105 115 95 101 118 101 110) (Integer 4))))
```

## Expected

```
() : Unit
() : Unit
true : Bool
```

## K Output

```
<generatedTop>
  <k>
    true ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "is_even" |-> closure ( "is_even" , ListItem ( "n" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Apply ( Apply ( Apply ( Apply ( Ident 105  102  .Chars ) ( Apply ( Op 61  61  .Chars ) ( Ident 110  .Chars )  ( Integer 0 )  .Exprs )  .Exprs ) ( Ident 116  104  101  110  .Chars )  .Exprs ) ( Ident 116  114  117  101  .Chars )  .Exprs ) ( Ident 101  108  115  101  .Chars )  .Exprs ) ( Apply ( Ident 105  115  95  111  100  100  .Chars ) ( Apply ( Op 45  .Chars ) ( Ident 110  .Chars )  ( Integer 1 )  .Exprs )  .Exprs )  .Exprs )  .Exprs ) , "is_even" |-> pending ( "is_even" )
    "is_odd" |-> pending ( "is_odd" ) )
    "is_odd" |-> closure ( "is_odd" , ListItem ( "n" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Apply ( Apply ( Apply ( Apply ( Ident 105  102  .Chars ) ( Apply ( Op 61  61  .Chars ) ( Ident 110  .Chars )  ( Integer 0 )  .Exprs )  .Exprs ) ( Ident 116  104  101  110  .Chars )  .Exprs ) ( Ident 102  97  108  115  101  .Chars )  .Exprs ) ( Ident 101  108  115  101  .Chars )  .Exprs ) ( Apply ( Ident 105  115  95  101  118  101  110  .Chars ) ( Apply ( Op 45  .Chars ) ( Ident 110  .Chars )  ( Integer 1 )  .Exprs )  .Exprs )  .Exprs )  .Exprs ) , "is_even" |-> closure ( "is_even" , ListItem ( "n" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Apply ( Apply ( Apply ( Apply ( Ident 105  102  .Chars ) ( Apply ( Op 61  61  .Chars ) ( Ident 110  .Chars )  ( Integer 0 )  .Exprs )  .Exprs ) ( Ident 116  104  101  110  .Chars )  .Exprs ) ( Ident 116  114  117  101  .Chars )  .Exprs ) ( Ident 101  108  115  101  .Chars )  .Exprs ) ( Apply ( Ident 105  115  95  111  100  100  .Chars ) ( Apply ( Op 45  .Chars ) ( Ident 110  .Chars )  ( Integer 1 )  .Exprs )  .Exprs )  .Exprs )  .Exprs ) , "is_even" |-> pending ( "is_even" )
    "is_odd" |-> pending ( "is_odd" ) )
    "is_odd" |-> pending ( "is_odd" ) ) )
    1 |-> scope ( 0 , "is_even" |-> pending ( "is_even" )
    "is_odd" |-> pending ( "is_odd" )
    "n" |-> 4 )
    2 |-> scope ( 1 , .Map )
    3 |-> scope ( 2 , "is_even" |-> closure ( "is_even" , ListItem ( "n" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Apply ( Apply ( Apply ( Apply ( Ident 105  102  .Chars ) ( Apply ( Op 61  61  .Chars ) ( Ident 110  .Chars )  ( Integer 0 )  .Exprs )  .Exprs ) ( Ident 116  104  101  110  .Chars )  .Exprs ) ( Ident 116  114  117  101  .Chars )  .Exprs ) ( Ident 101  108  115  101  .Chars )  .Exprs ) ( Apply ( Ident 105  115  95  111  100  100  .Chars ) ( Apply ( Op 45  .Chars ) ( Ident 110  .Chars )  ( Integer 1 )  .Exprs )  .Exprs )  .Exprs )  .Exprs ) , "is_even" |-> pending ( "is_even" )
    "is_odd" |-> pending ( "is_odd" ) )
    "is_odd" |-> pending ( "is_odd" )
    "n" |-> 3 )
    4 |-> scope ( 3 , .Map )
    5 |-> scope ( 4 , "is_even" |-> pending ( "is_even" )
    "is_odd" |-> pending ( "is_odd" )
    "n" |-> 2 )
    6 |-> scope ( 5 , .Map )
    7 |-> scope ( 6 , "is_even" |-> closure ( "is_even" , ListItem ( "n" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Apply ( Apply ( Apply ( Apply ( Ident 105  102  .Chars ) ( Apply ( Op 61  61  .Chars ) ( Ident 110  .Chars )  ( Integer 0 )  .Exprs )  .Exprs ) ( Ident 116  104  101  110  .Chars )  .Exprs ) ( Ident 116  114  117  101  .Chars )  .Exprs ) ( Ident 101  108  115  101  .Chars )  .Exprs ) ( Apply ( Ident 105  115  95  111  100  100  .Chars ) ( Apply ( Op 45  .Chars ) ( Ident 110  .Chars )  ( Integer 1 )  .Exprs )  .Exprs )  .Exprs )  .Exprs ) , "is_even" |-> pending ( "is_even" )
    "is_odd" |-> pending ( "is_odd" ) )
    "is_odd" |-> pending ( "is_odd" )
    "n" |-> 1 )
    8 |-> scope ( 7 , .Map )
    9 |-> scope ( 8 , "is_even" |-> pending ( "is_even" )
    "is_odd" |-> pending ( "is_odd" )
    "n" |-> 0 )
    10 |-> scope ( 9 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    11
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/functions-mutual-recursion.cdz"
  </file>
  <span-start>
    125
  </span-start>
  <span-end>
    134
  </span-end>
</generatedTop>
```

