reference/k/snapshots/functions-simple-application.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-simple-application.cdz
---
# functions-simple-application

## Input

```cadenza
fn triple x = x * 3
triple 7
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 115 105 109 112 108 101 45 97 112 112 108 105 99 97 116 105 111 110 46 99 100 122) (Span (0 20) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 116 114 105 112 108 101)) (Ident 120)) (Apply (Op 42) (Ident 120) (Integer 3)))) (Span (20 28) (Apply (Ident 116 114 105 112 108 101) (Integer 7))))
```

## Expected

```
() : Unit
21 : Integer
```

## K Output

```
<generatedTop>
  <k>
    21 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "triple" |-> closure ( "triple" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 3 )  .Exprs ) , "triple" |-> pending ( "triple" ) ) )
    1 |-> scope ( 0 , "triple" |-> pending ( "triple" )
    "x" |-> 7 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    2
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/functions-simple-application.cdz"
  </file>
  <span-start>
    20
  </span-start>
  <span-end>
    28
  </span-end>
</generatedTop>
```

