reference/k/snapshots/functions-simple-closure.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-simple-closure.cdz
---
# functions-simple-closure

## Input

```cadenza
let factor = 10
fn multiply_by_factor x = x * factor
multiply_by_factor 5
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 115 105 109 112 108 101 45 99 108 111 115 117 114 101 46 99 100 122) (Span (0 16) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 102 97 99 116 111 114)) (Integer 10))) (Span (16 53) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 109 117 108 116 105 112 108 121 95 98 121 95 102 97 99 116 111 114)) (Ident 120)) (Apply (Op 42) (Ident 120) (Ident 102 97 99 116 111 114)))) (Span (53 73) (Apply (Ident 109 117 108 116 105 112 108 121 95 98 121 95 102 97 99 116 111 114) (Integer 5))))
```

## Expected

```
() : Unit
() : Unit
50 : Integer
```

## K Output

```
<generatedTop>
  <k>
    50 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "factor" |-> 10
    "multiply_by_factor" |-> closure ( "multiply_by_factor" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Ident 102  97  99  116  111  114  .Chars )  .Exprs ) , "factor" |-> 10
    "multiply_by_factor" |-> pending ( "multiply_by_factor" ) ) )
    1 |-> scope ( 0 , "factor" |-> 10
    "multiply_by_factor" |-> pending ( "multiply_by_factor" )
    "x" |-> 5 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    2
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/functions-simple-closure.cdz"
  </file>
  <span-start>
    53
  </span-start>
  <span-end>
    73
  </span-end>
</generatedTop>
```

