reference/k/snapshots/functions-simple-function-definition.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-simple-function-definition.cdz
---
# functions-simple-function-definition

## Input

```cadenza
fn double x = x * 2
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 115 105 109 112 108 101 45 102 117 110 99 116 105 111 110 45 100 101 102 105 110 105 116 105 111 110 46 99 100 122) (Span (0 19) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 100 111 117 98 108 101)) (Ident 120)) (Apply (Op 42) (Ident 120) (Integer 2)))))
```

## Expected

```
() : Unit
```

## K Output

```
<k>
  tuple ( .List ) ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , "double" |-> closure ( "double" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Integer 2 )  .Exprs ) , "double" |-> pending ( "double" ) ) )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/functions-simple-function-definition.cdz"
</file>
<span-start>
  0
</span-start>
<span-end>
  19
</span-end>
```

