reference/k/snapshots/functions-simple-recursion.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-simple-recursion.cdz
---
# functions-simple-recursion

## Input

```cadenza
fn factorial n =
    if n == 0 then 1 else (n * (factorial (n - 1)))
factorial 5
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 115 105 109 112 108 101 45 114 101 99 117 114 115 105 111 110 46 99 100 122) (Span (0 69) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 102 97 99 116 111 114 105 97 108)) (Ident 110)) (Apply (Synthetic 95 95 98 108 111 99 107 95 95) (Apply (Apply (Apply (Apply (Apply (Ident 105 102) (Apply (Op 61 61) (Ident 110) (Integer 0))) (Ident 116 104 101 110)) (Integer 1)) (Ident 101 108 115 101)) (Apply (Op 42) (Ident 110) (Apply (Ident 102 97 99 116 111 114 105 97 108) (Apply (Op 45) (Ident 110) (Integer 1)))))))) (Span (69 80) (Apply (Ident 102 97 99 116 111 114 105 97 108) (Integer 5))))
```

## Expected

```
() : Unit
120 : Integer
```

## K Output

```
<generatedTop>
  <k>
    120 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "factorial" |-> closure ( "factorial" , ListItem ( "n" ) , ( Apply ( Synthetic 95  95  98  108  111  99  107  95  95  .Chars ) ( Apply ( Apply ( Apply ( Apply ( Apply ( Ident 105  102  .Chars ) ( Apply ( Op 61  61  .Chars ) ( Ident 110  .Chars )  ( Integer 0 )  .Exprs )  .Exprs ) ( Ident 116  104  101  110  .Chars )  .Exprs ) ( Integer 1 )  .Exprs ) ( Ident 101  108  115  101  .Chars )  .Exprs ) ( Apply ( Op 42  .Chars ) ( Ident 110  .Chars )  ( Apply ( Ident 102  97  99  116  111  114  105  97  108  .Chars ) ( Apply ( Op 45  .Chars ) ( Ident 110  .Chars )  ( Integer 1 )  .Exprs )  .Exprs )  .Exprs )  .Exprs )  .Exprs ) , "factorial" |-> pending ( "factorial" ) ) )
    1 |-> scope ( 0 , "factorial" |-> pending ( "factorial" )
    "n" |-> 5 )
    2 |-> scope ( 1 , .Map )
    3 |-> scope ( 2 , "factorial" |-> pending ( "factorial" )
    "n" |-> 4 )
    4 |-> scope ( 3 , .Map )
    5 |-> scope ( 4 , "factorial" |-> pending ( "factorial" )
    "n" |-> 3 )
    6 |-> scope ( 5 , .Map )
    7 |-> scope ( 6 , "factorial" |-> pending ( "factorial" )
    "n" |-> 2 )
    8 |-> scope ( 7 , .Map )
    9 |-> scope ( 8 , "factorial" |-> pending ( "factorial" )
    "n" |-> 1 )
    10 |-> scope ( 9 , .Map )
    11 |-> scope ( 10 , "factorial" |-> pending ( "factorial" )
    "n" |-> 0 )
    12 |-> scope ( 11 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    13
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/functions-simple-recursion.cdz"
  </file>
  <span-start>
    69
  </span-start>
  <span-end>
    80
  </span-end>
</generatedTop>
```

