reference/k/snapshots/functions-zero-parameter-function.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-zero-parameter-function.cdz
---
# functions-zero-parameter-function

## Input

```cadenza
fn get_value = 42
get_value
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 122 101 114 111 45 112 97 114 97 109 101 116 101 114 45 102 117 110 99 116 105 111 110 46 99 100 122) (Span (0 18) (Apply (Op 61) (Apply (Ident 102 110) (Ident 103 101 116 95 118 97 108 117 101)) (Integer 42))) (Span (18 27) (Ident 103 101 116 95 118 97 108 117 101)))
```

## Expected

```
() : Unit
42 : Integer
```

## K Output

```
<generatedTop>
  <k>
    42 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "get_value" |-> closure ( "get_value" , .List , ( Integer 42 ) , "get_value" |-> pending ( "get_value" ) ) )
    1 |-> scope ( 0 , "get_value" |-> pending ( "get_value" ) )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    2
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "crates/cadenza-compiler/test-data/semantics/functions-zero-parameter-function.cdz"
  </file>
  <span-start>
    18
  </span-start>
  <span-end>
    27
  </span-end>
</generatedTop>
```

