reference/k/snapshots/literals-empty-multi-line-string.snap
---
source: crates/cadenza-compiler/test-data/semantics/literals-empty-multi-line-string.cdz
---
# literals-empty-multi-line-string

## Input

```cadenza
"

"
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 108 105 116 101 114 97 108 115 45 101 109 112 116 121 45 109 117 108 116 105 45 108 105 110 101 45 115 116 114 105 110 103 46 99 100 122) (Span (0 4) (String 10 10)))
```

## Expected

```
"

" : String
```

## K Output

```
<generatedTop>
  <k>
    "\n\n" ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/literals-empty-multi-line-string.cdz"
  </file>
  <span-start>
    0
  </span-start>
  <span-end>
    4
  </span-end>
</generatedTop>
```

