reference/k/snapshots/literals-error-integer-overflow.snap
---
source: crates/cadenza-compiler/test-data/semantics/literals-error-integer-overflow.cdz
---
# literals-error-integer-overflow

## Input

```cadenza
999999999999999999999999999999999999999999
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 108 105 116 101 114 97 108 115 45 101 114 114 111 114 45 105 110 116 101 103 101 114 45 111 118 101 114 102 108 111 119 46 99 100 122) (Span (0 42) (Error)))
```

## Expected

```
error: integer literal is too large
 --> test.cdz:1:1
  |
1 | 999999999999999999999999999999999999999999
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ exceeds maximum 128-bit integer value
  |
  = note: maximum value is 170141183460469231731687303715884105727
  = help: consider using a BigInt type for arbitrarily large integers
```

## K Output

```
<generatedTop>
  <k>
    RuntimeError ( ) ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "crates/cadenza-compiler/test-data/semantics/literals-error-integer-overflow.cdz"
  </file>
  <span-start>
    0
  </span-start>
  <span-end>
    42
  </span-end>
</generatedTop>
```

