reference/k/snapshots/literals-error-invalid-escape-in-string.snap
---
source: crates/cadenza-compiler/test-data/semantics/literals-error-invalid-escape-in-string.cdz
---
# literals-error-invalid-escape-in-string

## Input

```cadenza
"hello\xworld"
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 108 105 116 101 114 97 108 115 45 101 114 114 111 114 45 105 110 118 97 108 105 100 45 101 115 99 97 112 101 45 105 110 45 115 116 114 105 110 103 46 99 100 122) (Span (0 14) (Error)))
```

## Expected

```
error: unknown escape sequence
 --> test.cdz:1:7
  |
1 | "hello\xworld"
  |       ^^ unknown escape: \x
  |
  = note: valid escape sequences are: \n \t \r \\ \" \u{...}
  = help: use \\ to include a literal backslash
```

## K Output

```
<generatedTop>
  <k>
    RuntimeError ( ) ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "crates/cadenza-compiler/test-data/semantics/literals-error-invalid-escape-in-string.cdz"
  </file>
  <span-start>
    0
  </span-start>
  <span-end>
    14
  </span-end>
</generatedTop>
```

